--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gpath.svg</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/gpath.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -34,6 +35,7 @@
             <input type="file" id="files" name="files[]" />
           </div>
         </form>
+        <p><small>Files are processed in your browser. No data is collected.</small></p>
 
       </header>
       <section id="output"></section>
@@ -64,13 +66,15 @@ Pebble doesn't have hardware accelerated floating point math, so avoiding floats
 <h3>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h3>
 
-<p>There is lots of room for improvement here. If you want to make this better please fork this repository and make a <a href="https://help.github.com/articles/using-pull-requests">pull requests</a>. Every sensible change will be merged.</p>
+<p>There is lots of room for improvement here. If you want to make this better please fork this repository and make a pull requests from the <a href="https://github.com/ardnejar/GPath.svg">GPath.svg GitHub</a> project page. Every sensible change will be merged. You can also use the GitHub project page to submit issues, feature requests and contact me. </p>
       </section>
+
       <footer>
         <p></p>
         <p class="view"><a href="https://github.com/ardnejar/GPath.svg">View, Fork, Blame this project on <strong>GitHub</strong></a></p>
       </footer>
     </div>
+
     <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/scale.fix.js"></script>
     <script src="javascripts/file-handler.js"></script>
