Update rounding note

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ Rajendra Serber</p>
 
 <p>Some primitive shape types are converted to paths. Rects and Lines can be drawn by Pebble when they are converted to paths.</p>
 
-<p><strong>Rounding</strong>
-Pebble doesn't have hardware accelerated floating point math, so avoiding floats where possible saves processing and therefor battery. By default the points are rounded to 0 decimal. Before you select your SVG file for conversion you can change your rounding preference. "None" will make it not rounded, but the addition function of JavaScript wil make relative points unreasonably long.</p>
+<p><strong>Rounding</strong><br>
+Before you select your SVG file for conversion you can change your rounding preference. "None" will make it not rounded, but the addition function of JavaScript wil make relative points unreasonably long. Pebble doesn't have hardware accelerated floating point math, so avoiding floats where possible saves processing and therefor battery.</p>
 
 <h3>
 <a id="limitations" class="anchor" href="#limitations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Limitations</h3>
