Bold testing limitation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Before you select your SVG file for conversion you can change your rounding pref
 
 <p>The current version drops any shapes that can't natively be drawn as a path on Pebble. Circles, Elipses and Polyline shapes can't be natively drawn by gpath draw. The curve data of paths is also dropped, leaving only the curves x and y values. Comments are added in place of the omitted data.</p>
 
-<p>This has only been tested in the latest versions of Chrome, Firefox, Safari and Internet Explorer. There is no support for older browsers planned.</p>
+<p><strong>This has only been tested in the latest versions of Chrome, Firefox, Safari and Internet Explorer.</strong> There is no support for older browsers planned.</p>
 
 <h3>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h3>
